--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "tsm",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/assets/theme/styles/base.less"
             ],
             "scripts": []
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -123,7 +125,8 @@
   },
   "defaultProject": "task-schedule-manager",
   "cli": {
-    "analytics": "2faac42d-ae2b-459f-b0a5-ece400fea280"
+    "analytics": "2faac42d-ae2b-459f-b0a5-ece400fea280",
+    "defaultCollection": "@datorama/akita"
   },
   "schematics": {
     "@schematics/angular:component": {
