--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@datorama/akita": "^4.23.1",
     "dayjs": "^1.8.27",
     "ngx-cookie-service": "^3.0.4",
+    "ngx-mat-select-search": "^2.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
