--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@datorama/akita": "^4.23.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "dayjs": "^1.8.27",
+    "ng2-charts": "^2.3.2",
+    "ngx-color-picker": "^9.1.0",
     "ngx-cookie-service": "^3.0.4",
     "ngx-mat-select-search": "^2.2.0",
     "rxjs": "~6.5.4",
