--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "gulp svg && ng serve --hmr=true --sourceMap=true --open --proxy-config proxy.conf.json",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,6 +25,8 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "dayjs": "^1.8.27",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.4",
     "ng2-charts": "^2.3.2",
     "ngx-color-picker": "^9.1.0",
     "ngx-cookie-service": "^3.0.4",
